Make summary section more natural and less AI-generated
- Remove generic bullet points and marketing language
- Replace with practical next steps and common patterns
- More authentic and less template-like

--- a/examples/kb_bridge_demo.ipynb
+++ b/examples/kb_bridge_demo.ipynb
@@ -687,39 +687,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Summary\n",
+        "## What's Next?\n",
         "\n",
-        "This notebook demonstrated the key features of KB-Bridge:\n",
+        "You've seen how KB-Bridge can help you search and query knowledge bases. ",
+        "Try adapting these examples to your own use case.\n",
         "\n",
-        "- **Assistant Tool** - Intelligent Q&A with custom instructions and query rewriting  \n",
-        "- **File Discovery** - Find relevant files before querying  \n",
-        "- **Document Filtering** - Search within specific documents  \n",
-        "- **Keyword Generation** - Improve search queries with LLM-generated keywords  \n",
-        "- **Multiple Search Methods** - Hybrid, semantic, keyword, and full-text search  \n",
-        "- **Complete Workflows** - Combine tools for comprehensive knowledge extraction  \n",
+        "**Common patterns:**\n",
+        "- Use `file_discover` to find relevant documents before querying\n",
+        "- Add `custom_instructions` for domain-specific guidance\n",
+        "- Enable `enable_query_rewriting` for better search coverage\n",
+        "- Filter by `document_name` when you know the specific file\n",
         "\n",
-        "## Use Cases\n",
-        "\n",
-        "- **Contract Analysis**: Analyze legal documents (see [ContractNLI](https://stanfordnlp.github.io/contract-nli/))\n",
-        "- **Document Q&A**: Answer questions about technical documentation and policies\n",
-        "- **Knowledge Base Search**: Search across large document collections\n",
-        "\n",
-        "## Next Steps\n",
-        "\n",
-        "- Explore the [full documentation](https://github.com/egpivo/kb-bridge)\n",
-        "- Check out the [test suite](https://github.com/egpivo/kb-bridge/tree/main/tests) for more examples\n",
-        "- Contribute on [GitHub](https://github.com/egpivo/kb-bridge)\n",
-        "\n",
-        "## Resources\n",
-        "\n",
-        "- **Installation**: `pip install kbbridge`\n",
-        "- **Server**: `python -m kbbridge.server`\n",
-        "- **Documentation**: See README.md in the repository\n",
-        "- **Issues**: [GitHub Issues](https://github.com/egpivo/kb-bridge/issues)\n",
-        "\n",
-        "---\n",
-        "\n",
-        "*Happy knowledge base searching!*\n"
+        "**Need help?** Check the [documentation](https://github.com/egpivo/kb-bridge) or open an [issue](https://github.com/egpivo/kb-bridge/issues).\n"
       ]
     }
   ],
