Rename notebook to contract_nli_example.ipynb and update intro
- Rename from kb_bridge_demo.ipynb to contract_nli_example.ipynb
- Update introduction to focus on ContractNLI dataset example
- Make it clear this demonstrates KB-Bridge functions for searching ContractNLI

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -4,34 +4,27 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# KB-Bridge: Intelligent Knowledge Base Search with MCP\n",
+        "# KB-Bridge Example: ContractNLI Dataset\n",
         "\n",
-        "**KB-Bridge** is a Model Context Protocol (MCP) server that provides intelligent search and retrieval capabilities for knowledge bases. It supports multiple backend providers (like Dify) and offers advanced features like semantic search, query rewriting, and automatic answer quality evaluation.\n",
+        "This notebook demonstrates how to use KB-Bridge to search and answer questions ",
+        "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/).\n",
         "\n",
-        "**Use Case**: KB-Bridge is ideal for contract analysis (e.g., [ContractNLI](https://stanfordnlp.github.io/contract-nli/)), document Q&A, and knowledge base search.\n",
-        "\n",
-        "## What You'll Learn\n",
-        "\n",
-        "- Real-world examples from ContractNLI dataset\n",
-        "- Query knowledge bases with natural language\n",
-        "- Custom instructions and query rewriting\n",
-        "- File discovery and document filtering\n",
+        "**What you'll do:**\n",
+        "- Query contract documents using natural language\n",
+        "- Use custom instructions for legal domain guidance\n",
+        "- Discover relevant files before querying\n",
+        "- Filter searches to specific documents\n",
         "\n",
         "## Prerequisites\n",
         "\n",
-        "Before running this notebook:\n",
-        "\n",
         "1. **Install KB-Bridge**: `pip install kbbridge`\n",
-        "2. **Install FastMCP**: `pip install fastmcp` (required for MCP client)\n",
-        "3. **Configure credentials**: Create a `.env` file with your backend credentials (see [README](https://github.com/egpivo/kb-bridge) for details)\n",
-        "4. **Start the server**: \n",
-        "   - **Option A (Recommended)**: Use the server utilities in the next cell - just run `start_server()` or `ensure_server_running()`\n",
-        "   - **Option B**: Start manually: `python -m kbbridge.server --host 0.0.0.0 --port 5566`\n",
+        "2. **Install FastMCP**: `pip install fastmcp`\n",
+        "3. **Configure credentials**: Create a `.env` file with your backend credentials\n",
+        "4. **Start the server**: Use `start_server()` in the next cell, or run `python -m kbbridge.server --port 5566`\n",
         "\n",
         "## Quick Links\n",
         "\n",
-        "- [PyPI Package](https://pypi.org/project/kbbridge/)\n",
-        "- [GitHub Repository](https://github.com/egpivo/kb-bridge)\n",
+        "- [KB-Bridge GitHub](https://github.com/egpivo/kb-bridge)\n",
         "- [ContractNLI Dataset](https://stanfordnlp.github.io/contract-nli/)\n"
       ]
     },
