Simplify notebook introduction - remove verbose AI-generated content
- Reduce from 30 lines to ~10 lines
- Remove marketing language and generic bullet points
- Keep only essential setup steps
- More direct and practical

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -6,26 +6,13 @@
       "source": [
         "# KB-Bridge Example: ContractNLI Dataset\n",
         "\n",
-        "This notebook demonstrates how to use KB-Bridge to search and answer questions ",
+        "This notebook shows how to use KB-Bridge to search and answer questions ",
         "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/).\n",
         "\n",
-        "**What you'll do:**\n",
-        "- Query contract documents using natural language\n",
-        "- Use custom instructions for legal domain guidance\n",
-        "- Discover relevant files before querying\n",
-        "- Filter searches to specific documents\n",
-        "\n",
-        "## Prerequisites\n",
-        "\n",
-        "1. **Install KB-Bridge**: `pip install kbbridge`\n",
-        "2. **Install FastMCP**: `pip install fastmcp`\n",
-        "3. **Configure credentials**: Create a `.env` file with your backend credentials\n",
-        "4. **Start the server**: Use `start_server()` in the next cell, or run `python -m kbbridge.server --port 5566`\n",
-        "\n",
-        "## Quick Links\n",
-        "\n",
-        "- [KB-Bridge GitHub](https://github.com/egpivo/kb-bridge)\n",
-        "- [ContractNLI Dataset](https://stanfordnlp.github.io/contract-nli/)\n"
+        "**Setup:**\n",
+        "1. Install: `pip install kbbridge fastmcp`\n",
+        "2. Configure `.env` with your backend credentials\n",
+        "3. Start server: run `start_server()` in the next cell\n"
       ]
     },
     {
