Remove redundant fastmcp installation step
- FastMCP is a dependency of kbbridge, so no need to install separately
- Simplify setup to just 'pip install kbbridge'

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -10,7 +10,7 @@
         "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/).\n",
         "\n",
         "**Setup:**\n",
-        "1. Install: `pip install kbbridge fastmcp`\n",
+        "1. Install: `pip install kbbridge`\n",
         "2. Configure `.env` with your backend credentials\n",
         "3. Start server: run `start_server()` in the next cell\n"
       ]
