Update notebook to assume ContractNLI files are already ingested
- Clarify that files should already be in Dify knowledge base
- Focus notebook on querying/searching, not ingestion
- Update note to reference Dify knowledge base ID

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -91,9 +91,10 @@
       "source": [
         "## Real-World Examples: ContractNLI Dataset\n",
         "\n",
-        "Examples from the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/) demonstrating legal document analysis.\n",
+        "Examples using the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/) ",
+        "assuming files are already ingested into your Dify knowledge base.\n",
         "\n",
-        "**Note**: Update `RESOURCE_ID` in the cell above with your actual knowledge base ID.\n"
+        "**Note**: Update `RESOURCE_ID` above with your Dify knowledge base ID.\n"
       ]
     },
     {
