Simplify ContractNLI examples section header
- Shorter title: 'ContractNLI Examples' instead of 'Real-World Examples: ContractNLI Dataset'
- More concise description
- Remove redundant mention of RESOURCE_ID

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# KB-Bridge Example: ContractNLI Dataset\n",
         "\n",
-        "This notebook shows how to use KB-Bridge to search and answer questions ",
+        "This notebook shows how to use KB-Bridge to search and answer questions \n",
         "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/).\n",
         "\n",
         "**Setup:**\n",
@@ -89,12 +89,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Real-World Examples: ContractNLI Dataset\n",
+        "## ContractNLI Examples\n",
         "\n",
-        "Examples using the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/) ",
-        "assuming files are already ingested into your Dify knowledge base.\n",
-        "\n",
-        "**Note**: Update `RESOURCE_ID` above with your Dify knowledge base ID.\n"
+        "Examples using the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/). ",
+        "Files are assumed to be already ingested into your Dify knowledge base.\n"
       ]
     },
     {
@@ -643,7 +641,7 @@
       "source": [
         "## What's Next?\n",
         "\n",
-        "You've seen how KB-Bridge can help you search and query knowledge bases. ",
+        "You've seen how KB-Bridge can help you search and query knowledge bases. \n",
         "Try adapting these examples to your own use case.\n",
         "\n",
         "**Common patterns:**\n",
