docs: add dify integration guidance

--- a/examples/contract_nli_example.ipynb
+++ b/examples/contract_nli_example.ipynb
@@ -6,14 +6,32 @@
       "source": [
         "# KB-Bridge Example: ContractNLI Dataset\n",
         "\n",
-        "This notebook shows how to use KB-Bridge to search and answer questions ",
-        "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/). ",
+        "This notebook shows how to use KB-Bridge to search and answer questions \n",
+        "in the [ContractNLI dataset](https://stanfordnlp.github.io/contract-nli/). \n",
         "Files are assumed to be already ingested into your Dify knowledge base.\n",
         "\n",
         "**Setup:**\n",
         "1. Install: `pip install kbbridge`\n",
         "2. Configure `.env` with your backend credentials\n",
         "3. Start server: run `start_server()` in the next cell\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Use KB-Bridge Inside Dify\n",
+        "\n",
+        "If you prefer a low-code workflow, connect KB-Bridge to a Dify Agent instead of calling the MCP tool manually:\n",
+        "\n",
+        "1. **Configure MCP Connection**\n",
+        "   - MCP URL: `http://localhost:5210/mcp`\n",
+        "   - Add auth headers: `X-RETRIEVAL-ENDPOINT`, `X-RETRIEVAL-API-KEY`, `X-LLM-API-URL`, `X-LLM-MODEL`\n",
+        "2. **Build the Agent Workflow**\n",
+        "   - Add an “MCP Tool” node and choose the `assistant` tool\n",
+        "   - Map workflow variables to `resource_id`, `query`, and other parameters\n",
+        "3. **Run Queries**\n",
+        "   - User input → Agent → MCP `assistant` tool → Structured answer with citations\n"
       ]
     },
     {
@@ -43,10 +61,10 @@
         "        else:\n",
         "            print(\"Server already running\")\n",
         "    \n",
-        "    print(\"\u2713 Server utilities loaded\")\n",
+        "    print(\"✓ Server utilities loaded\")\n",
         "    print(\"Use: start_server(port=5566) or ensure_server_running()\")\n",
         "except ImportError:\n",
-        "    print(\"\u26a0 Utils not available. Start server manually: python -m kbbridge.server --port 5566\")\n"
+        "    print(\"⚠ Utils not available. Start server manually: python -m kbbridge.server --port 5566\")\n"
       ]
     },
     {
@@ -73,17 +91,17 @@
         "\n",
         "try:\n",
         "    from fastmcp import Client\n",
-        "    print(\"\u2713 MCP Client loaded\")\n",
+        "    print(\"✓ MCP Client loaded\")\n",
         "except ImportError:\n",
-        "    print(\"\u26a0 FastMCP not found. Install it with: pip install fastmcp\")\n",
+        "    print(\"⚠ FastMCP not found. Install it with: pip install fastmcp\")\n",
         "    raise\n",
         "\n",
         "# Server configuration\n",
         "SERVER_URL = \"http://localhost:5566/mcp\"\n",
         "RESOURCE_ID = \"your-resource-id\"  # Replace with your actual resource ID\n",
         "\n",
-        "print(f\"\u2713 Server URL: {SERVER_URL}\")\n",
-        "print(f\"\u2713 Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
+        "print(f\"✓ Server URL: {SERVER_URL}\")\n",
+        "print(f\"✓ Resource ID: {RESOURCE_ID} (update this with your actual resource ID)\")\n"
       ]
     },
     {
